# bank-game-recreated

./: Cargo.toml  Dioxus.toml  LICENSE  README.md  shell.nix
.github/workflows/: main.yml
assets/: main.css
src/: main.rs
src/components/: end.rs  game.rs  home.rs  mod.rs
