[package]
name = "bank-game-recreated"
version = "0.1.0"
authors = ["StormLight14 <100660727+StormLight14@users.noreply.github.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dioxus = { version = "0.6.0", features = [] }
uuid = { version = "1.16.0", features = ["v4", "rng-rand", "js" ] }
getrandom = { version = "0.3", features = ["wasm_js"]}

[features]
default = ["web"]
web = ["dioxus/web"]
desktop = ["dioxus/desktop"]
mobile = ["dioxus/mobile"]

[profile]

[profile.wasm-dev]
inherits = "dev"
opt-level = 1

[profile.server-dev]
inherits = "dev"

[profile.android-dev]
inherits = "dev"
